* Thu Dec 07 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.1.2-0
- Update README.md from puppet strings

* Fri Sep 15 2017 Nick Miller <nick.miller@gmail.com> - 2.1.1-0
- Add message to reboot notify

* Wed Jul 12 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 2.1.0-0
- Rework manifests to ensure mcstrans and restorecond services are not
  running when selinux is disabled.
- Allow this module to manage restorecond package installation.

* Wed Apr 26 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.1.0-0
- Moved management of mcstrans and restorecond to the selinux module
- Change default packages ensure to use the catalyst
- Update puppet requirement in metadata.json

* Mon Apr 17 2017 Nick Markowski <nmarkowski@keywcorp.com> - 2.1.0-0
- Fixed a bug wherein setenforce would run if selinux was disabled
- Changes in selinux state incur a reboot notification

* Tue Mar 28 2017 Nick Miller <nick.miller@onyxpoint.com> 2.0.2-0
- Defaulted selinux::ensure to the selinux catalyst for better control
  of selinux enforcement.

* Tue Dec 20 2016 Nick Miller <nick.miller@onyxpoint.com> 2.0.1-0
- Strongly typed module

* Mon Nov 21 2016 SIMP-Team <https://groups.google.com/forum/#!forum/simp> 2.0.0-0
- Updated module for compliance markup API v1.0.0 compatibility.

* Wed Aug 31 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 1.0.3-0
- Ensure that policycoreutils-python is only installed if not installed
  elsewhere. This deconflicts with various hotfixes that were needed in other
  modules.

* Tue Jun 21 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.2-0
- policycoreutils-python now installed by default.

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 1.0.1-0
- Removed custom type deprecation warning

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 1.0.0-5
- Added compliance function support

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-4
- Changed puppet-server requirement to puppet
